--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,9 +61,9 @@ body {
 
 #playerList {
   position: relative;
-  float: right;
-  right: -16px;
-  top: -450px;
+
+  right: -226px;
+  top: -460px;
   width: 158px;
   background-color: black;
   font-family: "britannic", Arial, sans-serif;
@@ -89,14 +89,14 @@ body {
 
 #timer {
   position: relative;
-  bottom: 5px;
-  left: 100px;
+  bottom: 0px;
+  left: 2em;
   margin: 10px;
 }
 
 #diceRoller {
   position: relative;
-  bottom: 40px;
+  bottom: 110px;
   right: -100px;
   /* background-image: url("./img/Die.png"); */
   width: 150px;
@@ -220,10 +220,12 @@ button:active {
   position: absolute;
 }
 
-#splash  hr {
-  background-color: #000;
-  font-family: "britannic", Arial, sans-serif;
-  color: whitesmoke;
+#splash,   hr {
+
+  border: 1px solid rgb(224, 209, 66);
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -267,11 +269,12 @@ button:active {
 .ready {
   border: 2px solid lime;
   padding: 10px;
-  width: 4em;
+  text-align: center;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   background: black;
+  font-size: 14pt;
 
 
 }
